--- a/.github/workflows/publish_vscode.yml
+++ b/.github/workflows/publish_vscode.yml
@@ -10,7 +10,7 @@ jobs:
   # Phase 1: Build the extension on all platforms.
   build:
     strategy:
-      fail-fast: false
+#      fail-fast: false
       matrix:
         include:
           - os: windows-latest
