WIP - moving to centralized config for 'modules' instead of distributed package.yml

--- a/python/tach.yml
+++ b/python/tach.yml
@@ -1,44 +1,10 @@
-constraints:
-- tag: scope:cache
-  depends_on:
-  - scope:filesystem
-- tag: scope:core
-  depends_on:
-  - scope:utils
-- tag: scope:filesystem
-  depends_on:
-  - scope:hooks
-  - scope:utils
-- tag: scope:hooks
-  depends_on:
-  - scope:utils
-- tag: scope:interactive
-  depends_on:
-  - scope:filesystem
-  - scope:utils
-- tag: scope:logging
-  depends_on:
-  - scope:cache
-  - scope:parsing
-- tag: scope:parsing
-  depends_on:
-  - scope:core
-  - scope:filesystem
-  - scope:utils
-- tag: scope:root
-  depends_on:
-  - scope:core
-  - scope:filesystem
-  - scope:interactive
-  - scope:logging
-  - scope:parsing
-  - scope:utils
+modules: []
 exclude:
-- docs/
 - .*__pycache__/
-- dist/
-- tach.egg-info/
 - build/
+- dist/
+- docs/
+- tach.egg-info/
 - tests/
 exact: true
 disable_logging: false
