--- a/python/tests/example/valid/tach.yml
+++ b/python/tests/example/valid/tach.yml
@@ -1,11 +1,11 @@
-constraints:
-- tag: one
+modules:
+- path: domain_one
   depends_on:
-  - two
-- tag: two
+  - domain_two
+- path: domain_two
   depends_on:
-  - one
-- tag: three
+  - domain_one
+- path: domain_three
   depends_on: []
 exclude:
 - domain_thr.*
