--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,12 +26,12 @@ classifiers = [
     "Topic :: Software Development :: Quality Assurance",
 ]
 dependencies = [
-    "pyyaml==6.0.1",
-    "pydantic==2.7.1",
-    "rich==13.7.1",
-    "prompt-toolkit==3.0.43",
-    "stdlib-list==0.10.0; python_version < '3.10'",
-    "eval-type-backport==0.2.0; python_version < '3.10'"
+    "pyyaml~=6.0.1",
+    "pydantic~=2.7.1",
+    "rich~=13.7.1",
+    "prompt-toolkit~=3.0.43",
+    "stdlib-list>=0.10.0; python_version < '3.10'",
+    "eval-type-backport>=0.2.0; python_version < '3.10'"
 ]
 keywords = ['python', 'module', 'package', 'guard', 'enforcement', 'boundary', 'enforcer', 'domain', 'architecture']
 
