--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ bench = false
 pyo3 = "0.20.0"
 regex = "1.10.4"
 once_cell = "1.19.0"
-ruff_python_ast = { path = "crates/vendored/ruff_python_ast" }
-ruff_python_parser = { path = "crates/vendored/ruff_python_parser" }
-ruff_source_file = { path = "crates/vendored/ruff_source_file" }
+ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.5" }
+ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.5" }
+ruff_source_file = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.5" }
 
 [features]
 extension-module = ["pyo3/extension-module"]
