make files modules, add interfaces

--- a/python/tach.yml
+++ b/python/tach.yml
@@ -1,16 +1,10 @@
 modules:
 - path: tach
+  depends_on: []
+  strict: true
+- path: tach.__main__
   depends_on:
-  - tach.cache
-  - tach.check
-  - tach.colors
-  - tach.constants
-  - tach.core
-  - tach.errors
-  - tach.filesystem
-  - tach.interactive
-  - tach.logging
-  - tach.parsing
+  - tach.cli
   strict: true
 - path: tach.cache
   depends_on:
@@ -22,7 +16,26 @@ modules:
   - tach.errors
   - tach.filesystem
   - tach.parsing
-  strict: false
+  strict: true
+- path: tach.clean
+  depends_on:
+  - tach.filesystem
+  strict: true
+- path: tach.cli
+  depends_on:
+  - tach
+  - tach.cache
+  - tach.check
+  - tach.clean
+  - tach.colors
+  - tach.constants
+  - tach.core
+  - tach.filesystem
+  - tach.logging
+  - tach.mod
+  - tach.parsing
+  - tach.sync
+  strict: true
 - path: tach.colors
   depends_on: []
   strict: true
@@ -58,10 +71,29 @@ modules:
   - tach.cache
   - tach.parsing
   strict: true
+- path: tach.mod
+  depends_on:
+  - tach.colors
+  - tach.constants
+  - tach.core
+  - tach.errors
+  - tach.filesystem
+  - tach.interactive
+  - tach.parsing
+  strict: true
 - path: tach.parsing
   depends_on:
   - tach.core
   - tach.filesystem
+  strict: true
+- path: tach.sync
+  depends_on:
+  - tach.check
+  - tach.colors
+  - tach.constants
+  - tach.errors
+  - tach.filesystem
+  - tach.parsing
   strict: true
 exclude:
 - .*__pycache__/
