--- a/tach.yml
+++ b/tach.yml
@@ -10,18 +10,15 @@ modules:
   - tach.filesystem
 - path: tach.check
   depends_on:
+  - tach.core
   - tach.errors
   - tach.filesystem
   - tach.parsing
-- path: tach.clean
-  depends_on:
-  - tach.filesystem
 - path: tach.cli
   depends_on:
   - tach
   - tach.cache
   - tach.check
-  - tach.clean
   - tach.colors
   - tach.constants
   - tach.core
