--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,24 +36,21 @@ jobs:
     - name: Check ruff
       run: |
         source .venv/bin/activate
-        cd python
         ruff check
         ruff format --check
     - name: Test with pytest and report coverage
       run: |
         source .venv/bin/activate
-        cd python/tests
-        coverage run --branch --source=../ -m pytest
+        coverage run --branch --source=python -m pytest
         coverage report
     - name: Check types with pyright
       run: |
         source .venv/bin/activate
-        cd python
         pyright --pythonversion ${{ matrix.python-version }}
     - name: Check tach
       run: |
         source .venv/bin/activate
-        tach check --root python
+        tach check
     - name: Check Rust linting
       run: cargo clippy
     - name: Check Rust formatting
