--- a/tach.yml
+++ b/tach.yml
@@ -90,6 +90,8 @@ modules:
   - tach.errors
   strict: true
 - path: tach.show
+  depends_on:
+  - tach
   strict: true
 - path: tach.start
   depends_on:
