--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ walkdir = "2.5.0"
 ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.5" }
 ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.5" }
 ruff_source_file = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.5" }
+cached = { version = "0.51.4", features = ["disk_store"] }
 
 [features]
 extension-module = ["pyo3/extension-module"]
