--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "pydantic~=2.0",
     "rich~=13.0",
     "prompt-toolkit~=3.0",
+    "GitPython~=3.1",
     "stdlib-list>=0.10.0; python_version < '3.10'",
     "eval-type-backport>=0.2.0; python_version < '3.10'"
 ]
