tach sync modules

--- a/tach.yml
+++ b/tach.yml
@@ -82,6 +82,7 @@ modules:
   strict: true
 - path: tach.parsing
   depends_on:
+  - tach.constants
   - tach.core
   - tach.filesystem
   strict: true
