--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib", "lib"]
 bench = false
 
 [dependencies]
-pyo3 = { version = "0.22.1", features = ["gil-refs"] }
+pyo3 = "0.22.1"
 regex = "1.10.4"
 once_cell = "1.19.0"
 walkdir = "2.5.0"
