--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,14 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: |
+              3.7
+              3.8
+              3.9
+              3.10
+              3.11
+              3.12
+              3.13-dev
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -61,7 +68,14 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version:  |
+              3.7
+              3.8
+              3.9
+              3.10
+              3.11
+              3.12
+              3.13-dev
           architecture: ${{ matrix.platform.target }}
       - name: Build wheels
         uses: PyO3/maturin-action@v1
@@ -88,7 +102,14 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version:  |
+              3.7
+              3.8
+              3.9
+              3.10
+              3.11
+              3.12
+              3.13-dev
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
