--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 description = "A Python tool to maintain a modular package architecture."
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
@@ -16,6 +16,7 @@ classifiers = [
     "Environment :: Console",
     "Intended Audience :: Developers",
     "Programming Language :: Python",
+    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
@@ -32,7 +33,7 @@ dependencies = [
     "prompt-toolkit~=3.0",
     "GitPython~=3.1",
     "stdlib-list>=0.10.0; python_version < '3.10'",
-    "eval-type-backport>=0.2.0; python_version < '3.10'"
+    "eval-type-backport>=0.2.0; python_version < '3.10' and python_version > '3.7'"
 ]
 keywords = ['python', 'module', 'package', 'guard', 'enforcement', 'boundary', 'enforcer', 'domain', 'architecture']
 
@@ -46,6 +47,7 @@ src = ["python"]
 exclude = ["python/tests/example"]
 target-version = "py38"
 lint.extend-select = ["I", "TCH", "UP"]
+ignore = ["UP006", "UP007"]
 
 [tool.ruff.lint.isort]
 required-imports = ["from __future__ import annotations"]
