--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ dependencies = [
     "rich~=13.0",
     "prompt-toolkit~=3.0",
     "GitPython~=3.1",
-    "networkx~=3.0",
+    "networkx~=3.0; python_version > '3.7'",
+    "networkx~=2.6; python_version == '3.7'",
     "pydot~=2.0",
     "stdlib-list>=0.10.0; python_version < '3.10'",
     "eval-type-backport>=0.2.0; python_version < '3.10' and python_version > '3.7'"
