--- a/python/tests/example/valid/tach.yml
+++ b/python/tests/example/valid/tach.yml
@@ -1,14 +1,15 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/gauge-sh/tach/v0.8.3/public/tach-yml-schema.json
 modules:
   - path: domain_one
     depends_on:
-      - domain_two
-  - path: domain_two
-    depends_on:
-      - domain_three
-  - path: <root>
-    depends_on:
-      - domain_one
+      - path: domain_two
   - path: domain_three
     depends_on: []
+  - path: domain_two
+    depends_on:
+      - path: domain_three
+  - path: <root>
+    depends_on:
+      - path: domain_one
 exact: true
 forbid_circular_dependencies: true
