--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,4 +65,6 @@ jobs:
       run: cargo fmt --all --check
     - name: Check Rust
       run: cargo check
+    - name: Compile Maturin
+      run: maturin develop --release -E dev
 
