--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,11 +50,10 @@ jobs:
       run: |
         ruff check
         ruff format --check
-    - name: Test with tach/pytest and report coverage
+    - name: Test with pytest and report coverage
       run: |
         coverage run --branch --source=python -m pytest
         coverage report
-        cd python && tach test
     - name: Check types with pyright
       run: |
         pyright --pythonversion ${{ matrix.python-version }}
