--- a/python/tests/example/monorepo/tach.yml
+++ b/python/tests/example/monorepo/tach.yml
@@ -9,6 +9,11 @@ modules:
   - path: mod3
     depends_on:
       - path: mod2
+  - path: myorg.corepkg
+    depends_on:
+      - path: myorg.utilpkg
+  - path: myorg.utilpkg
+    depends_on: []
 exclude:
   - .*__pycache__
   - .*egg-info
@@ -17,4 +22,5 @@ exclude:
   - venv
 source_roots:
   - backend
+  - utils
 exact: true
