--- a/tach.toml
+++ b/tach.toml
@@ -1,11 +1,8 @@
 exclude = [
-    ".*__pycache__",
-    "build/",
-    "dist/",
-    "docs/",
-    "python/tests/",
-    "tach.egg-info/",
-    "venv/",
+    "**/tests/**",
+    "build/**",
+    "dist/**",
+    "docs/**",
 ]
 source_roots = ["python"]
 exact = true
