--- a/python/tests/example/valid/tach.toml
+++ b/python/tests/example/valid/tach.toml
@@ -1,9 +1,9 @@
 exclude = [
-    ".*__pycache__",
-    ".*egg-info",
-    "docs",
-    "tests",
-    "venv",
+    "**/tests/**",
+    "**/docs/**",
+    "**/venv/**",
+    "**/__pycache__/**",
+    "**/*egg-info/**",
 ]
 exact = true
 forbid_circular_dependencies = true
