--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ cached = { version = "0.53.1", features = ["disk_store"] }
 globset = "0.4.14"
 toml = "0.8.19"
 thiserror = "1.0.63"
+glob = "0.3.1"
 
 [features]
 extension-module = ["pyo3/extension-module"]
