--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ classifiers = [
     "Topic :: Software Development :: Quality Assurance",
 ]
 dependencies = [
-    "pyyaml~=6.0",
+    "tomli-w~=1.0",
     "pydantic~=2.0",
     "rich~=13.0",
     "prompt-toolkit~=3.0",
@@ -46,7 +46,6 @@ keywords = ['python', 'module', 'package', 'guard', 'enforcement', 'boundary', '
 [project.optional-dependencies]
 dev = [
     # Core deps (pinned)
-    "pyyaml==6.0.1",
     "pydantic==2.8.2; python_version > '3.7'",
     "rich==13.7.1",
     "prompt-toolkit==3.0.47",
